<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    style="@style/mix.matwr"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/match.center">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/user"
            style="@style/imageList"
            tools:src="@tools:sample/avatars"
            card_view:shapeAppearanceOverlay="@style/Circular"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/name"/>

        <TextView
            android:id="@+id/username"
            style="@style/wrap.username"
            tools:text="@string/name"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:layout_toEndOf="@id/user" />

        <TextView
            android:id="@+id/id"
            style="@style/wrap.id"
            android:text="@string/id"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/text_id"
            card_view:layout_constraintTop_toBottomOf="@+id/username" />

        <TextView
            android:id="@+id/text_id"
            style="@style/wrap.tid"
            android:text="@string/Tid"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/username" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>