<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splashscreen.SplashScreenActivity">

    <ImageView
        android:id="@+id/Background"
        android:layout_width="611dp"
        android:layout_height="883dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toEndOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69"
        app:srcCompat="@drawable/background"
        android:contentDescription="@string/background"/>

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="156dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/octocat"
        android:contentDescription="@string/logo"/>

    <ImageView
        android:id="@+id/githubUserApp"
        style="@style/wrap"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo"
        app:srcCompat="@drawable/github_user_app"
        android:contentDescription="@string/flogo"/>



    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/wrap"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/githubUserApp"
        android:indeterminateTint="@color/white"/>

    <ImageView
        android:id="@+id/submission3"
        style="@style/wrap"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:srcCompat="@drawable/submission_3" />

</androidx.constraintlayout.widget.ConstraintLayout>